# structlog-gcp

./: .gitignore  DEVELOPERS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: renovate.json5  set-version
.github/workflows/: build-test-release.yml  test.yml
examples/cloud-function/: Makefile  main.py  requirements.txt
structlog_gcp/: __about__.py  __init__.py  base.py  constants.py  error_reporting.py  errors.py  processors.py  types.py
structlog_gcp/http/: __init__.py  base.py
structlog_gcp/http/adapters/: starlette.py
tests/: conftest.py  fakes.py  test_adapter_starlette.py  test_http_processor.py  test_log.py
