[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structlog-gcp"
description = 'A structlog set of processors to output as Google Cloud Logging format'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Jonathan Ballet", email = "jon@multani.info" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "structlog",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/multani/structlog-gcp#readme"
Issues = "https://github.com/multani/structlog-gcp/issues"
Source = "https://github.com/multani/structlog-gcp"

[tool.hatch.version]
path = "structlog_gcp/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "ruff",
  "isort",
  "mypy",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--cov", "structlog_gcp",
  "--cov-branch",
  "--cov-report", "html",
  "--cov-report", "term",
  "--tb", "short",
  "--verbose",
  "--verbose",
]
testpaths = "tests"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "structlog_gcp/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.ruff]
ignore = [
  "E501",
]
