[project]
name = "structlog-gcp"
description = "A structlog set of processors to output as Google Cloud Logging format"
readme = "README.md"
requires-python = ">=3.10"
license =  { file = "LICENSE" }
keywords = []
authors = [
  { name = "Jonathan Ballet", email = "jon@multani.info" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "structlog",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/multani/structlog-gcp#readme"
Issues = "https://github.com/multani/structlog-gcp/issues"
Source = "https://github.com/multani/structlog-gcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "structlog_gcp/__about__.py"

[tool.uv]
dev-dependencies = [
    "build[uv]>=1.2.2",
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
    "starlette>=0.38.5",
]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--cov", "structlog_gcp",
  "--cov-branch",
  "--cov-report", "html",
  "--cov-report", "term",
  "--tb", "short",
  "--verbose",
  "--verbose",
]
testpaths = ["structlog_gcp", "tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "structlog_gcp/__about__.py",
]

[tool.mypy]
strict = true
files = ["structlog_gcp", "tests"]

[tool.ruff.lint]
extend-select = ["I"]
